# PinReady

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  sign-windows.yml
assets/dof/: directoutputconfig51.ini  tablemappings.xml
locales/: ar.toml  bn.toml  cs.toml  de.toml  en.toml  es.toml  fi.toml  fr.toml  hi.toml  id.toml  it.toml  ja.toml  ko.toml  nl.toml  pl.toml  pt.toml  ru.toml  sk.toml  sv.toml  sw.toml  th.toml  tr.toml  ur.toml  vi.toml  zh.toml  zh_tw.toml
src/: app.rs  assets.rs  audio.rs  config.rs  db.rs  display_id.rs  display_reconcile.rs  i18n.rs  inputs.rs  main.rs  mediadb.rs  merge.rs  outputs_hid.rs  pidlock.rs  scan_worker.rs  screens.rs  session.rs  system_info.rs  tilt.rs  updater.rs  vbs_patches.rs  wayland_activation.rs  wayland_caps.rs
src/app/: audio_page.rs  autostart.rs  catalog_worker.rs  desktop_integration.rs  help.rs  inputs_page.rs  launcher.rs  launcher_input.rs  launcher_ui.rs  mod.rs  outputs_page.rs  rendering_page.rs  save.rs  screens_page.rs  system_page.rs  tables_dir_page.rs  tilt_page.rs
src/vpsdb/: fetch.rs  matcher.rs  mod.rs  models.rs
target-bookworm/: .rustc_info.json
