[package]
name = "pinready"
version = "0.14.1"
edition = "2021"
description = "Cross-platform configurator and launcher supporting the adoption of Visual Pinball 10.8.1 — for testers and early adopters, not a replacement for a stable production setup"
license = "GPL-3.0-or-later"
repository = "https://github.com/Le-Syl21/PinReady"
homepage = "https://github.com/Le-Syl21/PinReady"
keywords = ["vpinball", "pinball", "cabinet", "launcher", "configurator"]
categories = ["games", "config", "gui"]
readme = "README.md"

[features]
default = []
win-icon = ["winres"]

[dependencies]
# UI
eframe = { version = "0.34", default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland", "x11"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image", "file"] }

# Display / Input
sdl3-sys = { version = "0.6", features = ["build-from-source-static"] }
display-info = "0.5"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ini-preserve = "0.1.1"

# Database
rusqlite = { version = "0.40", features = ["bundled"] }

# File dialog
rfd = "0.17"

# File scan
walkdir = "2.5"

# Images — `jpeg` used to encode backglass blobs stored in the SQLite cache
# at quality 85 (5× smaller than PNG, visually lossless on photographic
# content at our 1280×1024 target). `webp` kept for decode compatibility
# with any legacy cache rows still stored as WebP after a version upgrade.
image = { version = "0.25", features = ["png", "jpeg", "webp"] }

# B2S parsing (directb2s backglass thumbnail extraction)
directb2s = "0.1"
base64 = "0.22"

# .vpx file parsing — used to extract the embedded backglass preview
# (`TableInfo.screenshot`) when a table doesn't ship a separate .directb2s.
vpin = "0.26"

# Audio decoding (OGG Vorbis + MP3 → PCM for SDL3). MP3 is needed
# for table preview audio (medias/audio.mp3 from vpinmediadb).
symphonia = { version = "0.6", default-features = false, features = ["ogg", "vorbis", "mp3", "isomp4", "aac"] }

# HTTP (GitHub API + release download)
ureq = "3"

# Archive extraction (release downloads)
zip = "8"
flate2 = "1"
tar = "0.4"

# Threading
crossbeam-channel = "0.5"

# Logging
log = "0.4"
env_logger = "0.11"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }

# Internationalization
rust-i18n = "4"

# Fonts for non-Latin scripts (Arabic, CJK, Devanagari, Thai, etc.)
noto-fonts-dl = { version = "0.1.2", features = ["ar", "hi", "bn", "zh", "zh_tw", "ja", "ko", "th", "ur"] }

# Platform directories (data, config, home)
dirs = "6"

# Self-update: cross-platform running-binary replacement (handles the
# Windows rename-trick + atomic swap on unix).
self-replace = "1"

# Error handling
anyhow = "1"
regex = "1"

# SHA256 for VBS-patch fingerprinting (jsm174/vpx-standalone-scripts).
# Already pulled transitively; declared explicitly because we call it
# directly from vbs_patches.rs.
sha2 = "0.11"

# Percent-encode URL path segments. jsm174 patch URLs embed the table
# folder name, which often contains spaces (e.g. "AC-DC LUCI Premium
# VR"); ureq's HTTP client refuses raw spaces, so we pre-encode.
# Already pulled transitively; declared explicitly.
percent-encoding = "2"

# USB HID for output board discovery (Pinscape KL25Z / Pico, DudesCab, PinOne).
# linux-static-hidraw statically compiles the hidraw backend → zero runtime
# deps on Linux; native backends on macOS (IOKit) and Windows (Win32 HID API).
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }

# Localized SDL key labels in the wizard's input-binding page.
# Static lookup table — feeds rust_i18n::locale() and an SDL_Scancode and
# returns the right glyph for the user's UI language (Échap, Esc, エスケープ…).
sdl-keybridge = { version = "0.3", features = ["all-locales"] }

# Viewport rotation (transparent input/output remap + rotated software cursor)
# for cabinet mode. Registered as an egui Plugin from `main.rs`; the plugin owns
# input rotation, primitive rotation and the software cursor draw — PinReady
# has no eframe hooks left to wire.
egui-rotate = { version = "1", features = ["software-cursor"] }

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver", "winnt"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1

# Intermediate profile: optimized + small but no LTO → builds in ~30-60s, ~70-90MB.
# Use with: cargo build --profile=fast
[profile.fast]
inherits = "release"
lto = false
codegen-units = 16
strip = true

# Le-Syl21/egui fork on the `pinready-deps` branch. Slimmer than the previous
# full-rotation fork — only contains:
#   - eframe::App::transform_primitives + post_platform_output hooks
#     (pending upstream as PR https://github.com/emilk/egui/pull/8138 — when
#     merged + released, drop the `eframe` patch and depend on the new release)
#   - ViewportBuilder::with_monitor / ViewportCommand::SetMonitor
#     (cross-platform target-monitor selection — separate concern, no PR yet)
#   - Key::ShiftLeft/Right + IntlBackslash physical key variants
#     (pending upstream as PR https://github.com/emilk/egui/pull/8127)
#
# Rotation logic itself lives in the standalone `egui-rotate` crate (above).
[patch.crates-io]
egui        = { git = "https://github.com/Le-Syl21/egui", branch = "activation-token-event" }
eframe      = { git = "https://github.com/Le-Syl21/egui", branch = "activation-token-event" }
egui_extras = { git = "https://github.com/Le-Syl21/egui", branch = "activation-token-event" }
